Table "nourish_account" {
  "userId" varchar(255) [not null]
  "type" varchar(255) [not null]
  "provider" varchar(255) [not null]
  "providerAccountId" varchar(255) [not null]
  "refresh_token" varchar(255)
  "access_token" text
  "expires_at" int
  "token_type" varchar(255)
  "scope" varchar(255)
  "id_token" text
  "session_state" varchar(255)

Indexes {
  (provider, providerAccountId) [pk, name: "nourish_account_provider_providerAccountId_pk"]
  userId [name: "userId_idx"]
}
}

Table "nourish_session" {
  "sessionToken" varchar(255) [pk, not null]
  "userId" varchar(255) [not null]
  "expires" timestamp [not null]

Indexes {
  userId [name: "userId_idx"]
}
}

Table "nourish_user" {
  "id" varchar(255) [pk, not null]
  "name" varchar(255)
  "email" varchar(255) [not null]
  "emailVerified" timestamp(3) [default: `CURRENT_TIMESTAMP(3)`]
  "image" varchar(255)
  "username" varchar(30)
  "age" smallint
  "birth_sex" varchar(10)
  "height_cm" decimal(5,2)
  "weight_kg" decimal(5,2)
  "activity_level" varchar(50)
  "energy_expenditure" mediumint
  "allergies" text
  "dietary_preferences" text
  "medical_conditions" text
  "medications" text
  "nutritional_goals" text
  "ethnicity" varchar(50)
  "budget" decimal(10,2)
  "createdAt" timestamp [default: `now()`]
  "updatedAt" timestamp

Indexes {
  username [unique, name: "nourish_user_username_unique"]
  username [name: "username_idx"]
}
}

Table "nourish_verificationToken" {
  "identifier" varchar(255) [not null]
  "token" varchar(255) [not null]
  "expires" timestamp [not null]

Indexes {
  (identifier, token) [pk, name: "nourish_verificationToken_identifier_token_pk"]
}
}

Table "nourish_food_item" {
  "id" serial [pk, not null, increment]
  "name" varchar(255)
  "food_category" varchar(50)
  "serving_sizes" text
  "createdAt" timestamp [default: `now()`]
  "updatedAt" timestamp
}

Table "nourish_food_items_to_nutrients" {
  "food_item_id" bigint [not null]
  "nutrient_id" bigint [not null]
  "quantity_per_100g" decimal(10,4)
  "createdAt" timestamp [default: `now()`]
  "updatedAt" timestamp

Indexes {
  (food_item_id, nutrient_id) [pk, name: "nourish_food_items_to_nutrients_food_item_id_nutrient_id_pk"]
}
}

Table "nourish_nutrition" {
  "id" serial [pk, not null, increment]
  "user_id" varchar(255) [not null]
  "food_item_id" bigint [not null]
  "serving_size" varchar(100)
  "servings" decimal(8,3)
  "time" timestamp
  "createdAt" timestamp [default: `now()`]
  "updatedAt" timestamp
}

Table "nourish_nutrient" {
  "id" serial [pk, not null, increment]
  "category" varchar(100)
  "class" varchar(100)
  "group_name" varchar(100)
  "name" varchar(100)
  "unit" varchar(20)
  "daily_value" decimal(10,4)
  "createdAt" timestamp [default: `now()`]
  "updatedAt" timestamp
}

Ref: "nourish_user"."id" < "nourish_account"."userId"

Ref: "nourish_user"."id" < "nourish_session"."userId"

Ref: "nourish_user"."id" < "nourish_nutrition"."user_id"

Ref: "nourish_food_item"."id" < "nourish_nutrition"."food_item_id"

Ref: "nourish_food_item"."id" < "nourish_food_items_to_nutrients"."food_item_id"

Ref: "nourish_nutrient"."id" < "nourish_food_items_to_nutrients"."nutrient_id"
